--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: Mon portofolio
+title: Portfolio DNMADE
 
 # Your name to show in the footer
-author: Some Person
+author: Ali AYDOGDU
 
 # --- List of links in the navigation bar --- #
 
