--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Portfolio DNMADE
+title: ACCUEIL
 
 # Your name to show in the footer
 author: Ali AYDOGDU
@@ -106,7 +106,7 @@ post_search: true
 navbar-col: "#EAEAEA"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
+page-col: "#D7EDE9"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
