--- a/_config.yml
+++ b/_config.yml
@@ -112,8 +112,8 @@ link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-link-col: "#C9F5DF"
+footer-hover-col: "#A4F5B9"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
