--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,14 @@ post_search: true
 
 navbar-col: "#EAEAEA"
 navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+navbar-border-col: "#D4F7DD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
-footer-link-col: "#C9F5DF"
+footer-link-col: "#B7F5D4"
 footer-hover-col: "#A4F5B9"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
