--- a/_config.yml
+++ b/_config.yml
@@ -103,10 +103,10 @@ post_search: true
 
 Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
+navbar-col: "#D4EBF7"
 navbar-text-col: "#404040"
-navbar-border-col: "#D4F7DD"
-page-col: "#D4F7DD"
+navbar-border-col: "DDDDDD"
+page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
