--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ post_search: true
 
 # --- Colours / background image --- #
 
-Personalize the colours in your website. Colour values can be any valid CSS colour
+# Personalize the colours in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#D4EBF7"
 navbar-text-col: "#404040"
