--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
-hover-col: "#4FF563"
+hover-col: "#4BAFFF"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
