--- a/_config.yml
+++ b/_config.yml
@@ -101,11 +101,11 @@ post_search: true
 
 # --- Colours / background image --- #
 
-# Personalize the colours in your website. Colour values can be any valid CSS colour
+Personalize the colours in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#D4EBF7"
 navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+navbar-border-col: "#D4F7DD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
