--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#4BAFFF"
-footer-col: "#D4F7DD"
+footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#4FF563"
