--- a/_config.yml
+++ b/_config.yml
@@ -101,16 +101,16 @@ post_search: true
 
 # --- Colours / background image --- #
 
-# Personalize the colours in your website. Colour values can be any valid CSS colour
+Personalize the colours in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#D4EBF7"
 navbar-text-col: "#404040"
-navbar-border-col: "#D4F7DD"
+navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#4BAFFF"
-footer-col: "#EAEAEA"
+footer-col: "#D4F7DD"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#4FF563"
